--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Pedro Perez
-logo: /assets/img/logo.png
+logo: /Users/wpedroperez/Desktop/New CV/ProfileII.jpg
 description:
 show_downloads: false
 google_analytics:
