--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Pedro Perez
-logo: /assets/images/ProfileII.jpg
+logo: assets/img/ProfileII copy.png
 description:
 show_downloads: false
 google_analytics:
